--- a/bin/dune
+++ b/bin/dune
@@ -1,6 +1,6 @@
 (executables
- (public_names add_annotation sample_seqs sample_seqs_exact)
- (names add_annotation sample_seqs sample_seqs_exact)
+ (public_names add_annotation sample_seqs sample_seqs_exact annotate_from_file)
+ (names add_annotation sample_seqs sample_seqs_exact annotate_from_file)
  (libraries tomato_salad bio_io core)
  (preprocess
   (pps ppx_jane)))
