--- a/test/dune
+++ b/test/dune
@@ -3,5 +3,6 @@
    %{bin:add_annotation}
    %{bin:annotate_from_file}
    %{bin:combine_pasv_sigs}
+   %{bin:link_fasta_and_gff}
    %{bin:sample_seqs}
    %{bin:sample_seqs_exact}))
